HB-4517: alignment fixes

--- a/src/styles/modules/_m-npa-signup-search-filters.sass
+++ b/src/styles/modules/_m-npa-signup-search-filters.sass
@@ -5,7 +5,7 @@
     grid-template-columns: 100%
 
     +breakpoint(tablet-plus)
-      grid-template-columns: 50% 50%
+      grid-template-columns: 49% 48%
       +rem-fallback('grid-column-gap', 24px)
 
   +e(title)
